--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "wrangler": "wrangler pages dev ./public"
   },
   "dependencies": {
+    "@mui/base": "^5.0.0-alpha.125",
     "@remix-run/cloudflare": "^1.15.0",
     "@remix-run/cloudflare-pages": "^1.15.0",
     "@remix-run/react": "^1.15.0",
