--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/cloudflare": "^1.15.0",
     "@remix-run/cloudflare-pages": "^1.15.0",
     "@remix-run/react": "^1.15.0",
+    "@remix-run/v1-route-convention": "^0.1.1",
     "cross-env": "^7.0.3",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
